package external;

import java.time.LocalDateTime;

public class ExternalPetAuditService {

	
	public ExternalPetAuditService(String username, String password) {
	}
	
	public void recordFeeding(int petId, LocalDateTime dateTime) {
		
	}
}
